--- a/Views/Panel/EditHaberler.cshtml
+++ b/Views/Panel/EditHaberler.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="card card-primary">
     <div class="card-header">
-        <h3 class="card-title">Duyuru Ekle-Düzenle</h3>
+        <h3 class="card-title">Haber Ekle-Düzenle</h3>
     </div>
     <form asp-controller="Panel" asp-action="EditHaberler" method="post">
         <input asp-for="Id" type="hidden" />
