--- a/Views/Panel/EditFakulteler.cshtml
+++ b/Views/Panel/EditFakulteler.cshtml
@@ -17,7 +17,7 @@
                 <input asp-for="FakulteAd" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Adı">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Fakülte Adı</label>
+                <label for="exampleInputEmail1">Fakülte Açıklama</label>
                 <textarea asp-for="FakulteAciklama" class="form-control" rows="3" placeholder="Açıklama..." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
             </div>
             <div class="form-group">
@@ -26,11 +26,11 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Mail</label>
-                <input asp-for="FakulteMail" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Mail">
+                <input asp-for="FakulteMail" class="form-control" id="exampleInputEmail1" placeholder="Mail">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Telefon</label>
-                <input asp-for="FakulteTel" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Telefon">
+                <input asp-for="FakulteTel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
             </div>
 
             <div class="form-group">
@@ -51,7 +51,7 @@
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
         <div class="card-footer" style="float:right">
-            <button asp-controller="Panel" asp-action="Etkinlikler" class="btn btn-warning">Geri Dön</button>
+            <button asp-controller="Panel" asp-action="Fakulteler" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
 </div>
