--- a/Views/Panel/Edit.cshtml
+++ b/Views/Panel/Edit.cshtml
@@ -32,7 +32,7 @@
             </div>
 
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="float:left">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
         <div class="card-footer" style="float:right">
