--- a/Views/Panel/EditFakulteler.cshtml
+++ b/Views/Panel/EditFakulteler.cshtml
@@ -9,7 +9,7 @@
     <div class="card-header">
         <h3 class="card-title">Fakülte Ekle-Düzenle</h3>
     </div>
-    <form asp-controller="Panel" asp-action="EditFakulte" method="post">
+    <form asp-controller="Panel" asp-action="EditFakulteler" method="post">
         <input asp-for="Id" type="hidden" />
         <div class="card-body">
             <div class="form-group">
@@ -26,11 +26,11 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Mail</label>
-                <input asp-for="FakulteMail" class="form-control" id="exampleInputEmail1" placeholder="Mail">
+                <input asp-for="FakulteMail" type="email" class="form-control" id="exampleInputEmail1" placeholder="Mail">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Telefon</label>
-                <input asp-for="FakulteTel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
+                <input asp-for="FakulteTel" type="tel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
             </div>
 
             <div class="form-group">
