--- a/Views/Panel/EditFakulteler.cshtml
+++ b/Views/Panel/EditFakulteler.cshtml
@@ -1,4 +1,4 @@
-﻿@model Fakulte
+﻿@model FakulteViewModel
 @{
     Layout = "_PanelLayout";
 }
@@ -9,7 +9,7 @@
     <div class="card-header">
         <h3 class="card-title">Fakülte Ekle-Düzenle</h3>
     </div>
-    <form asp-controller="Panel" asp-action="EditFakulteler" method="post">
+    <form asp-controller="Panel" asp-action="EditFakulteler" method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
         <div class="card-body">
             <div class="form-group">
@@ -17,7 +17,7 @@
                 <input asp-for="FakulteAd" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Adı">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Fakülte Açıklama</label>
+                <label for="exampleInputEmail1">Fakülte Adı</label>
                 <textarea asp-for="FakulteAciklama" class="form-control" rows="3" placeholder="Açıklama..." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
             </div>
             <div class="form-group">
@@ -26,22 +26,19 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Mail</label>
-                <input asp-for="FakulteMail" type="email" class="form-control" id="exampleInputEmail1" placeholder="Mail">
+                <input asp-for="FakulteMail" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Mail">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Fakülte Telefon</label>
-                <input asp-for="FakulteTel" type="tel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
+                <input asp-for="FakulteTel" class="form-control" id="exampleInputEmail1" placeholder="Fakülte Telefon">
             </div>
 
             <div class="form-group">
-                <label for="exampleInputFile">Fakulte Görsel</label>
+                <label for="exampleInputFile">Fakülte Görsel</label>
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="exampleInputFile">
-                        <label class="custom-file-label" for="exampleInputFile">Görsel Seçin</label>
-                    </div>
-                    <div class="input-group-append">
-                        <span class="input-group-text">Yükle</span>
+                        <input type="file" asp-for="FakulteResim" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Görsel Seçiniz...</label>
                     </div>
                 </div>
             </div>
