--- a/Views/Etkinlik/Etkinlik.cshtml
+++ b/Views/Etkinlik/Etkinlik.cshtml
@@ -1,12 +1,13 @@
 ﻿@model DataViewModel
 @{
     Layout = "_SideLayout";
+    var image_path = $"/Image/{Model.Etkinlik.EtkinlikResim}";
 }
 <section id="first-section">
     <div class="container-fluid side-content">
         <div class="row">
             <div class="col-md-4">
-                <div id="fakulteImg"></div>
+                <img src="@image_path" />
             </div>
             <div class="col-md-8">
                 <h4 style="margin-bottom:0px;display:inline-block;">@Model.Etkinlik.EtkinlikBaslik</h4>
