--- a/Views/Panel/EditYuksekOkullar.cshtml
+++ b/Views/Panel/EditYuksekOkullar.cshtml
@@ -1,4 +1,4 @@
-﻿@model YuksekOkul
+﻿@model YuksekokulDataViewModel
 @{
     Layout = "_PanelLayout";
 }
@@ -6,7 +6,7 @@
     <div class="card-header">
         <h3 class="card-title">Yüksekokul Ekle-Düzenle</h3>
     </div>
-    <form asp-controller="Panel" asp-action="EditYuksekOkullar" method="post">
+    <form asp-controller="Panel" asp-action="EditYuksekOkullar" method="post" enctype="multipart/form-data">
         <input asp-for="Id" type="hidden" />
         <div class="card-body">
             <div class="form-group">
@@ -31,14 +31,12 @@
             </div>
 
             <div class="form-group">
-                <label for="exampleInputFile">File input</label>
+                <label for="exampleInputFile">Fakülte Görsel</label>
                 <div class="input-group">
                     <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="exampleInputFile">
-                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                    </div>
-                    <div class="input-group-append">
-                        <span class="input-group-text">Upload</span>
+                        <input type="hidden" asp-for="yukluYuksekOkulResim" class="custom-file-input" id="exampleInputFile">
+                        <input type="file" asp-for="YuksekOkulResim" class="custom-file-input" id="exampleInputFile">
+                        <label class="custom-file-label" for="exampleInputFile">Görsel Seçiniz...</label>
                     </div>
                 </div>
             </div>
