--- a/Views/Panel/EditEnstituler.cshtml
+++ b/Views/Panel/EditEnstituler.cshtml
@@ -32,7 +32,7 @@
             </div>
 
             <div class="form-group">
-                <label for="exampleInputFile">Fakülte Görsel</label>
+                <label for="exampleInputFile">Enstitü Görsel</label>
                 <div class="input-group">
                     <div class="custom-file">
                         <input type="hidden" asp-for="yukluEnsitutuResim" class="custom-file-input" id="exampleInputFile">
