--- a/Views/Panel/EditEtkinlik.cshtml
+++ b/Views/Panel/EditEtkinlik.cshtml
@@ -19,7 +19,7 @@
             </div>
 
             <div class="form-group">
-                <label for="exampleInputFile">Fakülte Görsel</label>
+                <label for="exampleInputFile">Etkinlik Görsel</label>
                 <div class="input-group">
                     <div class="custom-file">
                         <input type="hidden" asp-for="yukluEtkinlikResim" class="custom-file-input" id="exampleInputFile">
