--- a/Views/Panel/EditYuksekOkullar.cshtml
+++ b/Views/Panel/EditYuksekOkullar.cshtml
@@ -31,7 +31,7 @@
             </div>
 
             <div class="form-group">
-                <label for="exampleInputFile">Fakülte Görsel</label>
+                <label for="exampleInputFile">Yüksekokul Görsel</label>
                 <div class="input-group">
                     <div class="custom-file">
                         <input type="hidden" asp-for="yukluYuksekOkulResim" class="custom-file-input" id="exampleInputFile">
