--- a/Views/Haber/Index.cshtml
+++ b/Views/Haber/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <section id="first-section">
     <div class="container-fluid side-content">
-        <h3 class="pt-3 px-3">HABERLER</h3>
+        <h3 id="baslik" class="pt-3 px-3">HABERLER</h3>
         <hr />
         <div class="row">
             @foreach (Haber haber in Model.Haberler)
