--- a/Views/Panel/Bolumler.cshtml
+++ b/Views/Panel/Bolumler.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="bolumler">
-    <center><h5>BÖLÜMLER</h5></center>
+    <center><h4><b>BÖLÜMLER</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditBolumler">Bölüm Ekle</a>
     <br />
