--- a/Views/Panel/Duyurular.cshtml
+++ b/Views/Panel/Duyurular.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="duyurular">
-    <center><h5>DUYURULAR</h5></center>
+    <center><h4><b>DUYURULAR</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="Edit">Duyuru Ekle</a>
     <br />
