--- a/Views/Panel/EditBolumler.cshtml
+++ b/Views/Panel/EditBolumler.cshtml
@@ -48,10 +48,10 @@
             </div>
 
         </div>
-        <div class="card-footer" style="float:left">
+        <div class="card-footer" style="float: left; background-color: white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float:right">
+        <div class="card-footer" style="float: righ; background-color: whitet">
             <button asp-controller="Panel" asp-action="Bolumler" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
