--- a/Views/Panel/EditEtkinlik.cshtml
+++ b/Views/Panel/EditEtkinlik.cshtml
@@ -30,10 +30,10 @@
             </div>
 
         </div>
-        <div class="card-footer" style="float:left">
+        <div class="card-footer" style="float:left;background-color:white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float:right">
+        <div class="card-footer" style="float:right;background-color:white">
             <button asp-controller="Panel" asp-action="Etkinlikler" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
