--- a/Views/Panel/Enstituler.cshtml
+++ b/Views/Panel/Enstituler.cshtml
@@ -3,7 +3,8 @@
     Layout = "_PanelLayout";
 }
 <div class="enstituler">
-    <center><h5>ENSTİTÜLER</h5></center>
+    <br />
+    <center><h4><b>ENSTİTÜLER</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditEnstituler">Enstitü Ekle</a>
     <br />
