--- a/Views/Panel/Etkinlikler.cshtml
+++ b/Views/Panel/Etkinlikler.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="duyurular">
-    <center><h5>ETKİNLİKLER</h5></center>
+    <center><h4><b>ETKİNLİKLER</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditEtkinlik">Etkinlik Ekle</a>
     <br />
