--- a/Views/Panel/Fakulteler.cshtml
+++ b/Views/Panel/Fakulteler.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="fakulteler">
-    <center><h5>FAKÜLTELER</h5></center>
+    <center><h4><b>FAKÜLTELER</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditFakulteler">Fakülte Ekle</a>
     <br />
