--- a/Views/Panel/Haberler.cshtml
+++ b/Views/Panel/Haberler.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="haberler">
-    <center><h5>HABERLER</h5></center>
+    <center><h4><b>HABERLER</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditHaberler">Haber Ekle</a>
     <br />
