--- a/Views/Panel/MeslekYuksekOkullar.cshtml
+++ b/Views/Panel/MeslekYuksekOkullar.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="meslekyuksekokullar">
-    <center><h5>MESLEK YÜKSEK OKULLAR</h5></center>
+    <center><h4><b>MESLEK YÜKSEK OKULLAR</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditMeslekYuksekOkullar">Meslek Yüksekokul Ekle</a>
     <br />
