--- a/Views/Panel/YuksekOkullar.cshtml
+++ b/Views/Panel/YuksekOkullar.cshtml
@@ -3,7 +3,7 @@
     Layout = "_PanelLayout";
 }
 <div class="yuksekokullar">
-    <center><h5>YÜKSEK OKULLAR</h5></center>
+    <center><h4><b>YÜKSEK OKULLAR</b></h4></center>
     <br />
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditYuksekOkullar">Yüksekokul Ekle</a>
     <br />
