--- a/Views/Shared/_PanelLayout.cshtml
+++ b/Views/Shared/_PanelLayout.cshtml
@@ -72,8 +72,8 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a asp-controller="Panel" asp-action="Index" class="brand-link">
-                <span class="brand-text font-weight-light">Düzce Üni. Admin Paneli</span>
+            <a asp-controller="Panel" asp-action="Index" class="brand-link text-center">
+                <span class="brand-text font-weight-bold ">DÜ - Admin Paneli</span>
             </a>
 
             <!-- Sidebar -->
@@ -158,14 +158,14 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a asp-controller="Panel" asp-action="Enstituler" class="nav-link">
+                                    <a asp-controller="Panel" asp-action="YuksekOkullar" class="nav-link">
                                         <i class="fas fa-user-graduate"></i>
                                         <p>Yüksekokullar</p>
                                     </a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a asp-controller="Panel" asp-action="Enstituler" class="nav-link">
+                                    <a asp-controller="Panel" asp-action="MeslekYuksekOkullar" class="nav-link">
                                         <i class="fas fa-bong"></i>
                                         <p>Meslek Yüksekokullar</p>
                                     </a>
