--- a/Views/Etkinlik/Index.cshtml
+++ b/Views/Etkinlik/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <section id="first-section">
     <div class="container-fluid side-content">
-        <h3 class="pt-3 px-3">ETKİNLİKLER</h3>
+        <h3 id="baslik" class="pt-3 px-3">ETKİNLİKLER</h3>
         <hr />
         <div class="row">
             @foreach (Etkinlik etkinlik in Model.Etkinlikler)
