--- a/Views/Panel/EditEnstituler.cshtml
+++ b/Views/Panel/EditEnstituler.cshtml
@@ -24,11 +24,13 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Enstitü Tel</label>
-                <input type="tel" asp-for="EnsitutuTel" class="form-control" id="exampleInputEmail1" placeholder="Başlık">
+                <input type="tel" asp-for="EnsitutuTel" class="form-control" id="exampleInputEmail1" placeholder="(0___) - ___ - __ - __">
             </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Enstitü Mail</label>
-                <input type="email" asp-for="EnsitutuMail" class="form-control" id="exampleInputEmail1" placeholder="Başlık">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                </div>
+                <input type="email" asp-for="EnsitutuMail" class="form-control" placeholder="Email">
             </div>
 
             <div class="form-group">
@@ -43,10 +45,10 @@
             </div>
 
         </div>
-        <div class="card-footer" style="float:left">
+        <div class="card-footer" style="float:left;background-color:white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float:right">
+        <div class="card-footer" style="float: right; background-color: white ">
             <button asp-controller="Panel" asp-action="Enstituler" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
