--- a/Views/Panel/EditMeslekYuksekOkullar.cshtml
+++ b/Views/Panel/EditMeslekYuksekOkullar.cshtml
@@ -14,22 +14,23 @@
                 <input asp-for="MeslekYuksekOkulAd" class="form-control" id="exampleInputEmail1" placeholder="Ad">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Meslek Yüksekokul Mail</label>
-                <input type="email" asp-for="MeslekYuksekOkulMail" class="form-control" id="exampleInputEmail1" placeholder="Mail">
+                <label for="exampleInputPassword1">Meslek Yüksekokul Açıklaması</label>
+                <textarea asp-for="MeslekYuksekOkulAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Meslek Yüksekokul Tel</label>
-                <input type="tel" asp-for="MeslekYuksekOkulTel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
+                <label for="exampleInputEmail1">M. Yüksekokul Telefon</label>
+                <input type="tel" asp-for="MeslekYuksekOkulTel" class="form-control" id="exampleInputEmail1" placeholder="(0___) - ___ - __ - __">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Meslek Yüksekokul Adresi</label>
                 <textarea asp-for="MeslekYuksekOkulAdres" class="form-control" rows="3" placeholder="Adres.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Meslek Yüksekokul Açıklaması</label>
-                <textarea asp-for="MeslekYuksekOkulAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                </div>
+                <input type="email" asp-for="MeslekYuksekOkulMail" class="form-control" placeholder="Email">
             </div>
-
             <div class="form-group">
                 <label for="exampleInputFile">Meslek Yüksekokul Görsel</label>
                 <div class="input-group">
@@ -42,10 +43,10 @@
             </div>
 
         </div>
-        <div class="card-footer" style="float:left">
+        <div class="card-footer" style="float:left;background-color:white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float:right">
+        <div class="card-footer" style="float:right;background-color:white">
             <button asp-controller="Panel" asp-action="MeslekYuksekOkullar" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
