--- a/Views/Panel/EditYuksekOkullar.cshtml
+++ b/Views/Panel/EditYuksekOkullar.cshtml
@@ -14,21 +14,24 @@
                 <input asp-for="YuksekOkulAd" class="form-control" id="exampleInputEmail1" placeholder="Ad">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Meslek Yüksekokul Mail</label>
-                <input type="email" asp-for="YuksekOkulMail" class="form-control" id="exampleInputEmail1" placeholder="Mail">
+                <label for="exampleInputPassword1">Yüksekokul Açıklaması</label>
+                <textarea asp-for="YuksekOkulAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
+            </div>
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                </div>
+                <input type="email" asp-for="YuksekOkulMail" class="form-control" placeholder="Email">
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Yüksekokul Tel</label>
-                <input type="tel" asp-for="YuksekOkulTel" class="form-control" id="exampleInputEmail1" placeholder="Telefon">
+                <label for="exampleInputEmail1">Yüksekokul Telefon</label>
+                <input type="tel" asp-for="YuksekOkulTel" class="form-control" id="exampleInputEmail1" placeholder="(0___) - ___ - __ - __">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Yüksekokul Adresi</label>
                 <textarea asp-for="YuksekOkulAdres" class="form-control" rows="3" placeholder="Adres.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Yüksekokul Açıklaması</label>
-                <textarea asp-for="YuksekOkulAciklama" class="form-control" rows="3" placeholder="Açıklama.." style="margin-top: 0px; margin-bottom: 0px; height: 75px;"></textarea>
-            </div>
+
 
             <div class="form-group">
                 <label for="exampleInputFile">Yüksekokul Görsel</label>
@@ -42,10 +45,10 @@
             </div>
 
         </div>
-        <div class="card-footer" style="float:left">
+        <div class="card-footer" style="float:left;background-color:white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float:right">
+        <div class="card-footer" style="float:right;background-color:white">
             <button asp-controller="Panel" asp-action="YuksekOkullar" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
