--- a/wwwroot/css/sideLayout.css
+++ b/wwwroot/css/sideLayout.css
@@ -242,6 +242,16 @@ header {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.card-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+#baslik{
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    color: var(--duBlue);
+}
 /*footer {
     padding: 10px;
     color: white;
