--- a/Views/Shared/_SideLayout.cshtml
+++ b/Views/Shared/_SideLayout.cshtml
@@ -32,7 +32,7 @@
             }
             else
             {
-                <a class="cta" asp-controller="Auth" asp-action="Login">Giriş Yap</a>
+                <a class="cta" asp-controller="Auth" target="_blank" asp-action="Login">Giriş Yap</a>
             }
             <a class="cta" href="https://www.instagram.com/duzceuniversite/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a class="cta" href="https://twitter.com/duzceuniversite" target="_blank"><i class="fab fa-twitter"></i></a>
