--- a/wwwroot/css/sideLayout.css
+++ b/wwwroot/css/sideLayout.css
@@ -252,6 +252,9 @@ header {
     font-weight:bold;
     color: var(--duBlue);
 }
+.col-md-7{
+    margin-left:-50px !important;
+}
 /*footer {
     padding: 10px;
     color: white;
