Panel warning added

--- a/Views/Panel/Fakulteler.cshtml
+++ b/Views/Panel/Fakulteler.cshtml
@@ -8,6 +8,7 @@
     <a asp-controller="Panel" class="btn btn-outline-success" style="float:right" asp-action="EditFakulteler">Fakülte Ekle</a>
     <br />
     <br />
+    <a class="btn btn-outline-danger disabled w-100" style="background-color:rgb(255 0 0 / 0.15);color:red;">Bir fakülteyi silmek beraberinde ilgili tüm bölümleri de silmektedir.</a>
 
     <table class="table table-striped">
         <thead>
