Dataseed-layout updated

--- a/Views/Panel/Index.cshtml
+++ b/Views/Panel/Index.cshtml
@@ -13,7 +13,7 @@
                 <h5>
                     Duyuru Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.duyuruSayisi
                 </p>
             </div>
@@ -33,7 +33,7 @@
                 <h5>
                     Haber Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.haberSayisi
                 </p>
             </div>
@@ -48,12 +48,12 @@
     <!-- ./col -->
     <div class="col-lg-3 col-6">
         <!-- small card -->
-        <div class="small-box bg-warning">
+        <div class="small-box bg-fuchsia">
             <div class="inner">
                 <h5>
                     Etkinlik Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.etkinlikSayisi
                 </p>
             </div>
@@ -73,7 +73,7 @@
                 <h5>
                     Fakülte Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.fakulteSayisi
                 </p>
             </div>
@@ -95,7 +95,7 @@
                 <h5>
                     Bölüm Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.bolumSayisi
                 </p>
             </div>
@@ -117,7 +117,7 @@
                 <h5>
                     Enstitü Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.enstituSayisi
                 </p>
             </div>
@@ -139,7 +139,7 @@
                 <h5>
                     Yüksekokul Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.yuksekOkulSayisi
                 </p>
             </div>
@@ -161,7 +161,7 @@
                 <h5>
                     M. Yüksekokul Sayısı
                 </h5>
-                <p>
+                <p style="font-size:35px;font-weight:bold">
                     @ViewBag.meslekYuksekOkulSayisi
                 </p>
             </div>
