--- a/Views/Panel/EditBolumler.cshtml
+++ b/Views/Panel/EditBolumler.cshtml
@@ -32,26 +32,11 @@
                 </select>
             </div>
 
-
-
-            <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <div class="input-group">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="exampleInputFile">
-                        <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                    </div>
-                    <div class="input-group-append">
-                        <span class="input-group-text">Upload</span>
-                    </div>
-                </div>
-            </div>
-
         </div>
         <div class="card-footer" style="float: left; background-color: white">
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </div>
-        <div class="card-footer" style="float: righ; background-color: whitet">
+        <div class="card-footer" style="float: right; background-color: white">
             <button asp-controller="Panel" asp-action="Bolumler" class="btn btn-warning">Geri Dön</button>
         </div>
     </form>
